# CDIES

./: README.md  RI  clc  clp  cm  cm.cc  cnp.cc  cnpc  cnpcx  configure.sh  crc.cc  cs.sh  delete.cpp  dl.sh  extensions_install.cc  git_r  git_s  init.vim  install.sh  mpm.cc  msc  rc  share.h  tasks.toml  update.sh
.SpaceVim.d/: init.toml  tasks.toml
.ccls-cache/@@root@CDIES/: @media@sd@development@development@development@c++@Project@Console@checkExist.cc  @media@sd@development@development@development@c++@Project@Console@checkExist.cc.blob  @usr@include@aarch64-linux-gnu@asm@bitsperlong.h.blob  @usr@include@aarch64-linux-gnu@asm@errno.h.blob  @usr@include@aarch64-linux-gnu@asm@posix_types.h.blob  @usr@include@aarch64-linux-gnu@asm@types.h.blob  @usr@include@aarch64-linux-gnu@bits@byteswap.h.blob  @usr@include@aarch64-linux-gnu@bits@confname.h.blob  @usr@include@aarch64-linux-gnu@bits@cpu-set.h.blob  @usr@include@aarch64-linux-gnu@bits@dirent.h.blob  @usr@include@aarch64-linux-gnu@bits@dirent_ext.h.blob  @usr@include@aarch64-linux-gnu@bits@endian.h.blob  @usr@include@aarch64-linux-gnu@bits@endianness.h.blob  @usr@include@aarch64-linux-gnu@bits@environments.h.blob  @usr@include@aarch64-linux-gnu@bits@errno.h.blob  @usr@include@aarch64-linux-gnu@bits@floatn-common.h.blob  @usr@include@aarch64-linux-gnu@bits@floatn.h.blob  (+275 more)
extensions/: 1.PHP.sh  10.kernel.sh  11.gcc-12_and_g++-12.sh  12.gtk.sh  13.sdl.sh  2.Ruby.sh  3.Rust.sh  4.go.sh  5.lua.sh  6.Javascript.sh  7.perl.sh  8.kotlin.sh  9.gradle.sh
template/CMake/: CMakeLists.txt  description.txt
(+334 files in other folders)
